src/test/resources/de/cd4analysis/cocos/ebnf/invalid/CD4AC0006.cd
package de.cd4analysis.cocos;

classdiagram CD4AC0006 {
  enum E {
    a, b, a, c;
  }
}